# SpriteChatServer

./: .clang-format  .gitignore  CMakeLists.txt  clientdata.cpp  clientdata.h  hvacclientmanager.cpp  hvacclientmanager.h  hvacconnectionhandler.cpp  hvacconnectionhandler.h  hvacpackagebuilder.cpp  hvacpackagebuilder.h  hvacpacketbuilder.cpp  hvacpacketbuilder.h  hvacserverapplication.cpp  hvacserverapplication.h  hvacserverinformation.h  hvavconnectionhandler.cpp  hvavconnectionhandler.h  options.cpp  options.h  signalrelay.cpp
.github/workflows/: build.yml
src/: areadata.cpp  areadata.h  areamanager.cpp  areamanager.h  banmanager.cpp  banmanager.h  client.cpp  client.h  clientmanager.cpp  clientmanager.h  connectionhandler.cpp  connectionhandler.h  constants.h  coordinatorclient.cpp  coordinatorclient.h  datatypes.h  helper.h  hvacclientmanager.cpp  hvacclientmanager.h  hvacconnectionhandler.cpp  hvaccoordinatorclient.cpp  hvaccoordinatorclient.h  hvacpacketbuilder.cpp  hvacserverapplication.cpp  hvacserverapplication.h  hvacserverinformation.h  main.cpp  options.cpp  options.h  packetbuilder.cpp  packetbuilder.h  packetrelay.cpp  packetrelay.h  serverapplication.cpp  serverapplication.h  serverinformation.h  signalrelay.h
src/areas/: area.cpp  area.h  areamanager.cpp  areamanager.h  location.cpp  location.h
src/packet/: abstractpacket.h  packet.h  packet_generic.cpp  packet_generic.h  packet_hello.cpp  packet_hello.h  packet_selectarea.cpp  packet_selectarea.h  packet_selectcharacter.cpp  packet_selectcharacter.h  packetfactory.cpp  packetfactory.h
